### Updated fields
* Protocol_description became protocol with summary, title  and list of publications. The reason to bring in the title is that we want laboratories to reuse their existing protocols. The reason for the list of publications is to know, where does the original description of the protocol is stored

## [3.0-RC4] 2016-02-01 Samuel Kerrien

### Updated fields
* Gave resource's size the maximum value of Long.MAX_VALUE (i.e. 9,223,372,036,854,775,807)
* Added mininum and maximum attributes on resource's size to make it an unsigned long.
* Made all uuid fields into type 'string' and added pattern to validate UUID format (lowercase only).
* Add /agents.contributors.family_name
* Add /agents.contributors.given_names
* Add ‘private' to registration.release enum
* Rename dataset.comment to dataset.description
* Add an organisation_ref to /agents.contributors
  A user that has multiple organisations should be modelled as separate contributors so that roles can be attributed to a specific organisation.
  The organisation MUST be in the same file.

### Usage note
* Support for multiple roles for an activity's agent was requested but it was decided that we users should duplicate the definition of the agent instead.

## [3.0-RC3] 2016-01-07 Samuel Kerrien / Lomig Mégard / Catherine Zwahlen / Yuri Katkov

### Updated fields
* 'schema_version' enum now has only the following value: "3.0"
* All fields representing a UUID, previously typed as #/definitions/uuid are now defined as "type":"string", "format":"uuid"
  That way we do not have to maintain our own regex (which was wrong anyway since typically the accepted character set is 0-9a-Z)
* All fields representing dates, previously typed as #/definitions/date_optional_MM_DD are now defined as "type":"string", "format":"date" so we do not have to maintain our own regex. 