@@ -1,5 +1,5 @@
 {
-  "schema_version": "3.0-RC4",
+  "schema_version": "3.0-RC5",
   "registration": {
     "id": "12345678-1234-5678-1234-567812345678",
     "submission_date": "1999",
